@@ -331,7 +331,7 @@ public abstract class Way implements SelectionListener, CompletionListener,
      * @param endDetected
      *            Indicates if the end of the socket channel was detected.
      */
-    public void onCompleted(boolean endDetected) {
+    public void onCompleted(boolean endDetected) throws IOException {
         setIoState(IoState.IDLE);
         setMessageState(MessageState.IDLE);
         setMessage(null);
